--- a/index.html
+++ b/index.html
@@ -4,41 +4,221 @@
     <meta charset="utf-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1">
-		<meta name="description" content="testb">
-		<meta name="keywords" content="testb">
-		<meta name="author" content="testb">
-    <title>testb</title>
-		<link rel="shortcut icon" href="favicon.ico" type="image/ico">
+		<meta name="description" content="Allenia">
+		<meta name="keywords" content="Allenia">
+		<meta name="author" content="Allenia">
+    <title>Allenia</title>
+		<link rel="shortcut icon" href="favicon.png" type="image/ico">
     <link href="css/style.css" rel="stylesheet">
     <link rel="stylesheet" type="text/css" href="slick/slick.css">
     <link rel="stylesheet" type="text/css" href="slick/slick-theme.css">
 		<link rel="stylesheet" href="css/bootstrap.min.css">
 		<link rel="stylesheet" href="css/bootstrap-theme.min.css">
+    <link href="https://fonts.googleapis.com/css?family=Alegreya:400,400i,500,500i,700,700i,800,800i,900,900i" rel="stylesheet">
+		<link href="https://fonts.googleapis.com/css?family=Gentium+Basic:400,400i,700,700i" rel="stylesheet">
+		<link href="https://fonts.googleapis.com/css?family=Gentium+Book+Basic:400,400i,700,700i" rel="stylesheet">
+		<link href="https://fonts.googleapis.com/css?family=Nobile:400,400i,500,500i,700,700i" rel="stylesheet">
     <script type="text/javascript" src="js/jquery.js"></script>
     <script type="text/javascript" src="slick/jquery-1.11.0.min.js"></script>
     <script type="text/javascript" src="slick/jquery-migrate-1.2.1.min.js"></script>
-		<script src="js/bootstrap.min.js"></script> 
+		<script src="js/bootstrap.min.js"></script>
     <script type="text/javascript" src="slick/slick.min.js"></script>
 	</head>
-  
+
 	<body>
 		<div class="container-fluid">
 			<div class="row">
-				<div class="col-md-12">.col-md-12</div>
-			</div>
-			<ul class="nav nav-pills my-nav"> 
-				<li class="active"><a class="my-nav__item" href="#">Home</a></li> 
-				<li><a href="#">Profile</a></li> 
-				<li><a href="#">Messages</a></li> 
-			</ul>
-			<div class="row">
-				<div class="col-md-8">.col-md-8</div>
-				<div class="col-md-4">.col-md-4</div>
+				<div class="col-md-12 text-center">
+					<h1>
+						Allenia
+					</h1>
+					<small>You always want to read it</small>
+				</div>
 			</div>
 			<div class="row">
-				<div class="col-md-12">.col-md-12</div>
+				<div class="col-md-12 col-md-12--centered">
+					<ul class="nav nav-pills">
+						<li><a href="#">Home</a></li>
+						<li><a href="#">About</a></li>
+						<li><a href="#">Portfolio</a></li>
+						<li><a href="#">Blog</a></li>
+						<li><a href="#">Contact</a></li>
+						<li><a href="#">Search</a></li>
+					</ul>
+				</div>
+			</div>
+			<div class="row">
+				<div class="col-md-12">
+					<div class="slider">
+  					<div>
+							<img src="img/slide1.jpg">
+							<p class="slide-text text-center">
+								Real Colors - black & white
+							</p>
+						</div>
+  					<div><img src="img/slide2.jpg"></div>
+						<div><img src="img/slide1.jpg"></div>
+  					<div><img src="img/slide2.jpg"></div>
+					</div>
+				</div>
+			</div>
+			<div class="row">
+				<div class="col-md-12 text-center">
+					<p class="wiki">
+						Typography (from the Greek words τύπος (typos)
+					</p>
+				</div>
+			</div>
+			<div class="row">
+				<div class="col-md-4">
+					<div class="thumbnail">
+	      		<div class="caption">
+	        		<h3 class="feature-title feature-title--star-icon">
+								Corporate Identity
+							</h3>
+	        		<p class="feature-desc">
+								Nunc consequat lorem semper nisl rutrum quis mattis dui volutpat. Maecenas dapibus venenatis leo rutrum adipiscing. Nulla ut tellus lorem. Curabitur volutpat eros magna.
+							</p>
+	      		</div>
+					</div>
+				</div>
+				<div class="col-md-4">
+					<div class="thumbnail">
+	      		<div class="caption">
+	        		<h3 class="feature-title feature-title--heart-icon">
+								Responsive & Retina Ready
+							</h3>
+	        		<p class="feature-desc">
+								Nullam non porta magna. Integer vitae erat vitae lectus volutpat scelerisque quis id nulla. Aliquam leo mauris, volutpat id fermentum non, ullamcorper non enim.
+							</p>
+	      		</div>
+					</div>
+				</div>
+				<div class="col-md-4">
+					<div class="thumbnail">
+	      		<div class="caption">
+	        		<h3 class="feature-title feature-title--screpa-icon">
+								Page Builder & Useful Features
+							</h3>
+	        		<p class="feature-desc">
+								Phasellus nunc tortor, ornare non pulvinar eget, tempor ut dolor. Duis rhoncus cursus condimentum. Quisque commodo sapien sed ipsum viverra nec aliquam quam facilisis.
+							</p>
+	      		</div>
+					</div>
+				</div>
+			</div>
+			<div class="row">
+				<div class="col-md-4">
+					<div class="thumbnail">
+	      		<img src="img/img1.jpg" data-src="holder.js/300x200" alt="...">
+	      		<div class="caption">
+	        		<h3 class="item-title">
+								Easy Day
+							</h3>
+							<small class="item-date">1.05.2017</small>
+	        		<p class="item-desc">
+								Phasellus nunc tortor, ornare non pulvinar eget, tempor ut dolor. Duis rhoncus cursus condimentum. Quisque commodo sapien sed ipsum viverra nec aliquam quam facilisis.
+							</p>
+	      		</div>
+					</div>
+				</div>
+				<div class="col-md-4">
+					<div class="thumbnail">
+	      		<img src="img/img2.jpg" data-src="holder.js/300x200" alt="...">
+	      		<div class="caption">
+	        		<h3 class="item-title">
+								Funny Sings
+							</h3>
+							<small class="item-date">18.05.2017</small>
+	        		<p class="item-desc">
+								Sed magna sem, mattis nec consectetur at, pretium euismod leo. Integer et dolor neque. Sed bibendum mi vel massa bibendum et vehicula eros pellentesque. Integer semper, tortor nec viverra.
+							</p>
+	      		</div>
+					</div>
+				</div>
+				<div class="col-md-4">
+					<div class="thumbnail">
+	      		<img src="img/img3.jpg" data-src="holder.js/300x200" alt="...">
+	      		<div class="caption">
+	        		<h3 class="item-title">
+								Our Office
+							</h3>
+							<small class="item-date">17.05.2017</small>
+	        		<p class="item-desc">
+								Nulla egestas bibendum bibendum. Donec sit amet arcu eget mauris luctus dictum ac at quam. Quisque viverra consectetur metus, in viverra urna fringilla consectetur. Suspendisse.
+							</p>
+	      		</div>
+					</div>
+				</div>
+			</div>
+			<div class="row">
+				<div class="col-md-4">
+					<div class="thumbnail">
+	      		<img src="img/img4.jpg" data-src="holder.js/300x200" alt="...">
+	      		<div class="caption">
+	        		<h3 class="item-title">
+								More Than Feeling
+							</h3>
+							<small class="item-date">22.05.2013</small>
+	        		<p class="item-desc">
+								Aenean luctus, enim eu venenatis rhoncus, erat lectus sodales felis, a malesuada sem massa vel dolor. Proin nisl dolor, pulvinar quis blandit am, varius nec nisl. Nunc sodales rhoncus orci, vel tincidunt mauris pulvinar a.
+							</p>
+	      		</div>
+					</div>
+				</div>
+				<div class="col-md-4">
+					<div class="thumbnail">
+	      		<img src="img/img5.jpg" data-src="holder.js/300x200" alt="...">
+	      		<div class="caption">
+	        		<h3 class="item-title">
+								Work Every Day
+							</h3>
+							<small class="item-date">21.05.2013</small>
+	        		<p class="item-desc">
+								Sed magna sem, mattis nec consectetur at, pretium euismod leo. Integer et dolor neque. Sed bibendum mi vel massa bibendum et vehicula eros pellentesque. Integer semper, tortor nec viverra.
+							</p>
+	      		</div>
+					</div>
+				</div>
+				<div class="col-md-4">
+					<div class="thumbnail">
+	      		<img src="img/img6.jpg" data-src="holder.js/300x200" alt="...">
+	      		<div class="caption">
+	        		<h3 class="item-title">
+								Dont Forget to Smile
+							</h3>
+							<small class="item-date">20.05.2013</small>
+	        		<p class="item-desc">
+								Nulla egestas bibendum bibendum. Donec sit amet arcu eget mauris luctus dictum ac at quam. Quisque viverra consectetur metus, in viverra urna fringilla consectetur. Suspendisse.
+							</p>
+	      		</div>
+					</div>
+				</div>
+			</div>
+			<div class="row">
+				<div class="col-md-12 text-center">
+					<img src="img/plus.png">
+				</div>
+			</div>
+			<div class="row">
+				<div class="col-md-12 text-center">
+					<a href="#"><img src="img/twitter.png"></a>
+					<a href="#"><img src="img/facebook.png"></a>
+					<a href="#"><img src="img/dribbble.png"></a>
+					<a href="#"><img src="img/google-plus.png"></a>
+					<a href="#"><img src="img/strikethrough.png"></a>
+				</div>
+			</div>
+			<div class="row">
+				<div class="col-md-12 text-center">
+					<p class="copyright">Designed by Artstudioworks</p>
+				</div>
 			</div>
 		</div>
+
+		<script type="text/javascript" src="js/script.js">
+		</script>
+
 	</body>
-	
+
 </html>
