--- a/index.html
+++ b/index.html
@@ -36,7 +36,7 @@
 				</div>
 			</div>
 			<div class="row">
-				<div class="col-md-12 col-md-12--centered">
+				<div class="col-md-12 col-md-12--centered nav-block">
 					<ul class="nav nav-pills">
 						<li><a href="#">Home</a></li>
 						<li><a href="#">About</a></li>
@@ -79,6 +79,9 @@
 	        		<p class="feature-desc">
 								Nunc consequat lorem semper nisl rutrum quis mattis dui volutpat. Maecenas dapibus venenatis leo rutrum adipiscing. Nulla ut tellus lorem. Curabitur volutpat eros magna.
 							</p>
+							<p class="feature-more text-right">
+								<a class="feature-more-link" href="#">Continue Reading</a>
+							</p>
 	      		</div>
 					</div>
 				</div>
@@ -91,6 +94,9 @@
 	        		<p class="feature-desc">
 								Nullam non porta magna. Integer vitae erat vitae lectus volutpat scelerisque quis id nulla. Aliquam leo mauris, volutpat id fermentum non, ullamcorper non enim.
 							</p>
+							<p class="feature-more text-right">
+								<a class="feature-more-link" href="#">Continue Reading</a>
+							</p>
 	      		</div>
 					</div>
 				</div>
@@ -102,6 +108,9 @@
 							</h3>
 	        		<p class="feature-desc">
 								Phasellus nunc tortor, ornare non pulvinar eget, tempor ut dolor. Duis rhoncus cursus condimentum. Quisque commodo sapien sed ipsum viverra nec aliquam quam facilisis.
+							</p>
+							<p class="feature-more text-right">
+								<a class="feature-more-link" href="#">Continue Reading</a>
 							</p>
 	      		</div>
 					</div>
@@ -195,18 +204,20 @@
 					</div>
 				</div>
 			</div>
-			<div class="row">
+			<div class="row more-posts">
 				<div class="col-md-12 text-center">
 					<img src="img/plus.png">
 				</div>
 			</div>
-			<div class="row">
-				<div class="col-md-12 text-center">
-					<a href="#"><img src="img/twitter.png"></a>
-					<a href="#"><img src="img/facebook.png"></a>
-					<a href="#"><img src="img/dribbble.png"></a>
-					<a href="#"><img src="img/google-plus.png"></a>
-					<a href="#"><img src="img/strikethrough.png"></a>
+			<div class="row socials">
+				<div class="col-md-12 text-center social-items">
+					<div class="social-links">
+						<a href="#"><img src="img/twitter.png"></a>
+						<a href="#"><img src="img/facebook.png"></a>
+						<a href="#"><img src="img/dribbble.png"></a>
+						<a href="#"><img src="img/google-plus.png"></a>
+						<a href="#"><img src="img/strikethrough.png"></a>
+					</div>
 				</div>
 			</div>
 			<div class="row">
