--- a/index.html
+++ b/index.html
@@ -39,7 +39,7 @@
 				<div class="col-md-12 col-md-12--centered nav-block">
 					<ul class="nav nav-pills">
 						<li><a href="#">Home</a></li>
-						<li><a href="#">About</a></li>
+						<li><a href="about.html">About</a></li>
 						<li><a href="#">Portfolio</a></li>
 						<li><a href="#">Blog</a></li>
 						<li><a href="#">Contact</a></li>
