--- a/index.html
+++ b/index.html
@@ -40,9 +40,9 @@
 					<ul class="nav nav-pills">
 						<li><a href="#">Home</a></li>
 						<li><a href="about.html">About</a></li>
-						<li><a href="#">Portfolio</a></li>
+						<li><a href="portfolio.html">Portfolio</a></li>
 						<li><a href="#">Blog</a></li>
-						<li><a href="#">Contact</a></li>
+						<li><a href="contact.html">Contact</a></li>
 						<li><a href="#">Search</a></li>
 					</ul>
 				</div>
